Add slills in secondary info

--- a/index.html
+++ b/index.html
@@ -133,6 +133,12 @@
               </div>
             </div>
           </div>
+          <div class="resume__block">
+            <div class="skills">
+              <h3 class="skills__header">Skills</h3>
+              <p class="skills__text">Love difficult tasks, have knowledge: DBMS-(PostgreSQL, MongoDB), CSS, Node.js, Vue.js. </p>
+            </div>
+          </div>
         </div>
       </div>
     </main>
