Add experience block in secondary info

--- a/index.html
+++ b/index.html
@@ -139,6 +139,31 @@
               <p class="skills__text">Love difficult tasks, have knowledge: DBMS-(PostgreSQL, MongoDB), CSS, Node.js, Vue.js. </p>
             </div>
           </div>
+          <div class="resume__block">
+            <div class="main-info fh">
+              <div class="experiences">
+                <h3 class="experiences__header">Experience</h3>
+                <div class="experiences__company">
+                  <div class="experiences__company-header">
+                    <span class="experiences__company-header-durability">For whole my life</span>
+                    <h3 class="experiences__company-header-name">KPI</h3>
+                  </div>
+
+                  <div class="experiences__company-project">
+                    <span class="experiences__company-project-role">Full-stack developer</span>
+                    <h3 class="experiences__company-project-name">It's a secret</h3>
+                    <ul class="experiences__company-project-responsibilities">
+                      <li>Test control</li>
+                      <li>Interaction with DB</li>
+                      <li>logging system</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+        
+              <div class="additional-info fv"></div>
+            </div>
+          </div>
         </div>
       </div>
     </main>
