--- a/index.html
+++ b/index.html
@@ -161,7 +161,29 @@
                 </div>
               </div>
         
-              <div class="additional-info fv"></div>
+              <div class="additional-info fv">
+                <div class="additional-info__education">
+                  <h3 class="additional-info__education-header">Education</h3>
+                  <div class="additional-info__education-university">
+                    <span class="additional-info__education-university-durability">2023</span>
+                    <h3 class="additional-info__education-university-speciality">Software engineering</h3>
+                    <p class="additional-info__education-university-name">Kyiv Polytechnic Institute</p>
+                  </div>
+                </div>
+              
+                <div class="additional-info__languages">
+                  <h3 class="additional-info__languages-header">Languages</h3>
+                  <p class="additional-info__languages-item">
+                    Ukrainian (understand)
+                  </p>
+                  <p class="additional-info__languages-item">
+                    English (fifty-fifty understand)
+                  </p>
+                  <p class="additional-info__languages-item">
+                    russian (I'm trying to forget)
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
