Add timeline info in resume

--- a/index.html
+++ b/index.html
@@ -186,6 +186,12 @@
               </div>
             </div>
           </div>
+          <div class="resume__block">
+            <div class="timelines">
+              <h3 class="timelines__header">Timeline</h3>
+              <p class="timelines__text">External independent evaluation, the first lab on the matan, the first session, the first term paper, the first scholarship, life in a hostel, broke the window oops, broke arm in the winter, burned down moscow :)</p>
+            </div>
+          </div>
         </div>
       </div>
     </main>
