Chenge some resume info

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         s9,4.029,9,9V188.036z"/>
                     </svg>
                   </div>
-                  <span>KPI</span>
+                  <span>Top Institute</span>
                 </a>
                 <a href="" rel="author" class="contact-info__item">
                   <div class="contact-info__item-icon-wrapper">
@@ -92,7 +92,7 @@
                         c0,0,0,0,0,0c3.721,0,7.188-1.581,10.306-4.698l2.537-2.537C54.033,45.163,54.383,42.833,53.364,40.908z"/>
                     </svg>
                   </div>
-                  <span>(+380)0123456789</span>
+                  <span>(+380)012345--89</span>
                 </a>
                 <a href="" rel="author" class="contact-info__item">
                   <div class="contact-info__item-icon-wrapper">
@@ -146,7 +146,7 @@
                 <div class="experiences__company">
                   <div class="experiences__company-header">
                     <span class="experiences__company-header-durability">For whole my life</span>
-                    <h3 class="experiences__company-header-name">KPI</h3>
+                    <h3 class="experiences__company-header-name">Top Institute</h3>
                   </div>
 
                   <div class="experiences__company-project">
@@ -167,7 +167,7 @@
                   <div class="additional-info__education-university">
                     <span class="additional-info__education-university-durability">2023</span>
                     <h3 class="additional-info__education-university-speciality">Software engineering</h3>
-                    <p class="additional-info__education-university-name">Kyiv Polytechnic Institute</p>
+                    <p class="additional-info__education-university-name">Kyiv Institute</p>
                   </div>
                 </div>
               
